Rerunning sentiment classification after fixing FOMC membership data

--- a/stance-vectors/sentiment_classification.ipynb
+++ b/stance-vectors/sentiment_classification.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-27 08:35:57.391836: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-02-27 08:35:57.570200: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-02-27 08:35:57.570330: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-02-27 08:35:57.602454: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-02-27 08:35:57.699580: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-02-27 08:35:57.703163: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-03-23 15:35:10.454000: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-03-23 15:35:10.612264: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-03-23 15:35:10.612326: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-03-23 15:35:10.644964: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-03-23 15:35:10.693508: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-03-23 15:35:10.695024: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-02-27 08:35:58.794137: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-03-23 15:35:11.753019: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,38 +69,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>bernanke</td>\n",
-       "      <td>2002-08-13</td>\n",
+       "      <td>barkin</td>\n",
+       "      <td>2018-01-31</td>\n",
        "      <td>1</td>\n",
-       "      <td>Thank you, Mr. Chairman.</td>\n",
+       "      <td>Thank you, Madam Chair.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>bernanke</td>\n",
-       "      <td>2002-08-13</td>\n",
+       "      <th>1</th>\n",
+       "      <td>barkin</td>\n",
+       "      <td>2018-01-31</td>\n",
        "      <td>1</td>\n",
-       "      <td>As we search for the signal of an incipient re...</td>\n",
+       "      <td>I am privileged to be here to participate in t...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>bernanke</td>\n",
-       "      <td>2002-08-13</td>\n",
+       "      <th>2</th>\n",
+       "      <td>barkin</td>\n",
+       "      <td>2018-01-31</td>\n",
        "      <td>1</td>\n",
-       "      <td>The first source of noise is the financial mar...</td>\n",
+       "      <td>So thank you for that.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>bernanke</td>\n",
-       "      <td>2002-08-13</td>\n",
+       "      <th>3</th>\n",
+       "      <td>barkin</td>\n",
+       "      <td>2018-01-31</td>\n",
        "      <td>1</td>\n",
-       "      <td>Our financial markets usually exhibit controll...</td>\n",
+       "      <td>Speaking of humility, I am humbled to be here ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>bernanke</td>\n",
-       "      <td>2002-08-13</td>\n",
+       "      <th>4</th>\n",
+       "      <td>barkin</td>\n",
+       "      <td>2018-01-31</td>\n",
        "      <td>1</td>\n",
-       "      <td>The stock market in particular seems to be sea...</td>\n",
+       "      <td>I hope at the end of my remarks you won't thin...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -110,35 +110,35 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6701</th>\n",
+       "      <th>261983</th>\n",
        "      <td>yellen</td>\n",
        "      <td>2018-01-31</td>\n",
        "      <td>2</td>\n",
        "      <td>Further comments?</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6701</th>\n",
+       "      <th>261984</th>\n",
        "      <td>yellen</td>\n",
        "      <td>2018-01-31</td>\n",
        "      <td>2</td>\n",
        "      <td>Okay.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6701</th>\n",
+       "      <th>261985</th>\n",
        "      <td>yellen</td>\n",
        "      <td>2018-01-31</td>\n",
        "      <td>2</td>\n",
        "      <td>Well, hearing this discussion, I think my incl...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6701</th>\n",
+       "      <th>261986</th>\n",
        "      <td>yellen</td>\n",
        "      <td>2018-01-31</td>\n",
        "      <td>2</td>\n",
        "      <td>I recognize that there is some risk in doing i...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6701</th>\n",
+       "      <th>261987</th>\n",
        "      <td>yellen</td>\n",
        "      <td>2018-01-31</td>\n",
        "      <td>2</td>\n",
@@ -146,40 +146,40 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>260807 rows × 4 columns</p>\n",
+       "<p>261988 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "         lname        date  section  \\\n",
-       "0     bernanke  2002-08-13        1   \n",
-       "0     bernanke  2002-08-13        1   \n",
-       "0     bernanke  2002-08-13        1   \n",
-       "0     bernanke  2002-08-13        1   \n",
-       "0     bernanke  2002-08-13        1   \n",
+       "0       barkin  2018-01-31        1   \n",
+       "1       barkin  2018-01-31        1   \n",
+       "2       barkin  2018-01-31        1   \n",
+       "3       barkin  2018-01-31        1   \n",
+       "4       barkin  2018-01-31        1   \n",
        "...        ...         ...      ...   \n",
-       "6701    yellen  2018-01-31        2   \n",
-       "6701    yellen  2018-01-31        2   \n",
-       "6701    yellen  2018-01-31        2   \n",
-       "6701    yellen  2018-01-31        2   \n",
-       "6701    yellen  2018-01-31        2   \n",
+       "261983  yellen  2018-01-31        2   \n",
+       "261984  yellen  2018-01-31        2   \n",
+       "261985  yellen  2018-01-31        2   \n",
+       "261986  yellen  2018-01-31        2   \n",
+       "261987  yellen  2018-01-31        2   \n",
        "\n",
-       "                                                content  \n",
-       "0                              Thank you, Mr. Chairman.  \n",
-       "0     As we search for the signal of an incipient re...  \n",
-       "0     The first source of noise is the financial mar...  \n",
-       "0     Our financial markets usually exhibit controll...  \n",
-       "0     The stock market in particular seems to be sea...  \n",
-       "...                                                 ...  \n",
-       "6701                                  Further comments?  \n",
-       "6701                                              Okay.  \n",
-       "6701  Well, hearing this discussion, I think my incl...  \n",
-       "6701  I recognize that there is some risk in doing i...  \n",
-       "6701  So let me ask Jim Clouse to make clear what th...  \n",
+       "                                                  content  \n",
+       "0                                 Thank you, Madam Chair.  \n",
+       "1       I am privileged to be here to participate in t...  \n",
+       "2                                  So thank you for that.  \n",
+       "3       Speaking of humility, I am humbled to be here ...  \n",
+       "4       I hope at the end of my remarks you won't thin...  \n",
+       "...                                                   ...  \n",
+       "261983                                  Further comments?  \n",
+       "261984                                              Okay.  \n",
+       "261985  Well, hearing this discussion, I think my incl...  \n",
+       "261986  I recognize that there is some risk in doing i...  \n",
+       "261987  So let me ask Jim Clouse to make clear what th...  \n",
        "\n",
-       "[260807 rows x 4 columns]"
+       "[261988 rows x 4 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
