Added new column for the average of prior speakers

--- a/speaker-order/order_proxy.ipynb
+++ b/speaker-order/order_proxy.ipynb
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1303,7 +1303,321 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_29473/2917729530.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  orderdf.sort_values(['date', 'section', 'order'])[orderdf['date'] == '2018-12-19']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>section</th>\n",
+       "      <th>lname</th>\n",
+       "      <th>order</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6678</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>bostic</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6682</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>clarida</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6691</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>rosengren</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6685</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>harker</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6677</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>barkin</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6681</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>bullard</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6688</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>mester</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6683</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>evans</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6680</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>brainard</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6686</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>kaplan</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6684</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>george</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6679</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>bowman</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6690</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>quarles</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6687</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>kashkari</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6692</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>williams</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6689</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>powell</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6698</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>clarida</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6707</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>rosengren</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6697</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>bullard</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6701</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>harker</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6704</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>mester</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6694</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>bostic</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6699</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>evans</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6693</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>barkin</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6696</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>brainard</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6702</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>kaplan</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6695</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>bowman</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6700</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>george</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6706</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>quarles</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6703</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>kashkari</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6708</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>williams</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6705</th>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>powell</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            date  section      lname  order\n",
+       "6678  2018-12-19        1     bostic      1\n",
+       "6682  2018-12-19        1    clarida      2\n",
+       "6691  2018-12-19        1  rosengren      3\n",
+       "6685  2018-12-19        1     harker      4\n",
+       "6677  2018-12-19        1     barkin      5\n",
+       "6681  2018-12-19        1    bullard      6\n",
+       "6688  2018-12-19        1     mester      7\n",
+       "6683  2018-12-19        1      evans      8\n",
+       "6680  2018-12-19        1   brainard      9\n",
+       "6686  2018-12-19        1     kaplan     10\n",
+       "6684  2018-12-19        1     george     11\n",
+       "6679  2018-12-19        1     bowman     12\n",
+       "6690  2018-12-19        1    quarles     13\n",
+       "6687  2018-12-19        1   kashkari     14\n",
+       "6692  2018-12-19        1   williams     16\n",
+       "6689  2018-12-19        1     powell     17\n",
+       "6698  2018-12-19        2    clarida      1\n",
+       "6707  2018-12-19        2  rosengren      2\n",
+       "6697  2018-12-19        2    bullard      3\n",
+       "6701  2018-12-19        2     harker      4\n",
+       "6704  2018-12-19        2     mester      5\n",
+       "6694  2018-12-19        2     bostic      6\n",
+       "6699  2018-12-19        2      evans      7\n",
+       "6693  2018-12-19        2     barkin      8\n",
+       "6696  2018-12-19        2   brainard      9\n",
+       "6702  2018-12-19        2     kaplan     10\n",
+       "6695  2018-12-19        2     bowman     11\n",
+       "6700  2018-12-19        2     george     12\n",
+       "6706  2018-12-19        2    quarles     13\n",
+       "6703  2018-12-19        2   kashkari     14\n",
+       "6708  2018-12-19        2   williams     16\n",
+       "6705  2018-12-19        2     powell     17"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orderdf.sort_values(['date', 'section', 'order'])[orderdf['date'] == '2018-12-19']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
