Rerunning sentence creation with FOMC fixes

--- a/stance-vectors/create_sents.ipynb
+++ b/stance-vectors/create_sents.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -76,38 +76,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>bernanke</td>\n",
-       "      <td>2002-08-13</td>\n",
+       "      <td>barkin</td>\n",
+       "      <td>2018-01-31</td>\n",
        "      <td>1</td>\n",
-       "      <td>Thank you, Mr. Chairman.</td>\n",
+       "      <td>Thank you, Madam Chair.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>bernanke</td>\n",
-       "      <td>2002-08-13</td>\n",
+       "      <td>barkin</td>\n",
+       "      <td>2018-01-31</td>\n",
        "      <td>1</td>\n",
-       "      <td>As we search for the signal of an incipient re...</td>\n",
+       "      <td>I am privileged to be here to participate in t...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>bernanke</td>\n",
-       "      <td>2002-08-13</td>\n",
+       "      <td>barkin</td>\n",
+       "      <td>2018-01-31</td>\n",
        "      <td>1</td>\n",
-       "      <td>The first source of noise is the financial mar...</td>\n",
+       "      <td>So thank you for that.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>bernanke</td>\n",
-       "      <td>2002-08-13</td>\n",
+       "      <td>barkin</td>\n",
+       "      <td>2018-01-31</td>\n",
        "      <td>1</td>\n",
-       "      <td>Our financial markets usually exhibit controll...</td>\n",
+       "      <td>Speaking of humility, I am humbled to be here ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>bernanke</td>\n",
-       "      <td>2002-08-13</td>\n",
+       "      <td>barkin</td>\n",
+       "      <td>2018-01-31</td>\n",
        "      <td>1</td>\n",
-       "      <td>The stock market in particular seems to be sea...</td>\n",
+       "      <td>I hope at the end of my remarks you won't thin...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -117,35 +117,35 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6701</th>\n",
+       "      <th>6742</th>\n",
        "      <td>yellen</td>\n",
        "      <td>2018-01-31</td>\n",
        "      <td>2</td>\n",
        "      <td>Further comments?</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6701</th>\n",
+       "      <th>6742</th>\n",
        "      <td>yellen</td>\n",
        "      <td>2018-01-31</td>\n",
        "      <td>2</td>\n",
        "      <td>Okay.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6701</th>\n",
+       "      <th>6742</th>\n",
        "      <td>yellen</td>\n",
        "      <td>2018-01-31</td>\n",
        "      <td>2</td>\n",
        "      <td>Well, hearing this discussion, I think my incl...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6701</th>\n",
+       "      <th>6742</th>\n",
        "      <td>yellen</td>\n",
        "      <td>2018-01-31</td>\n",
        "      <td>2</td>\n",
        "      <td>I recognize that there is some risk in doing i...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6701</th>\n",
+       "      <th>6742</th>\n",
        "      <td>yellen</td>\n",
        "      <td>2018-01-31</td>\n",
        "      <td>2</td>\n",
@@ -153,40 +153,40 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>260807 rows × 4 columns</p>\n",
+       "<p>261988 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         lname        date  section  \\\n",
-       "0     bernanke  2002-08-13        1   \n",
-       "0     bernanke  2002-08-13        1   \n",
-       "0     bernanke  2002-08-13        1   \n",
-       "0     bernanke  2002-08-13        1   \n",
-       "0     bernanke  2002-08-13        1   \n",
-       "...        ...         ...      ...   \n",
-       "6701    yellen  2018-01-31        2   \n",
-       "6701    yellen  2018-01-31        2   \n",
-       "6701    yellen  2018-01-31        2   \n",
-       "6701    yellen  2018-01-31        2   \n",
-       "6701    yellen  2018-01-31        2   \n",
+       "       lname        date  section  \\\n",
+       "0     barkin  2018-01-31        1   \n",
+       "0     barkin  2018-01-31        1   \n",
+       "0     barkin  2018-01-31        1   \n",
+       "0     barkin  2018-01-31        1   \n",
+       "0     barkin  2018-01-31        1   \n",
+       "...      ...         ...      ...   \n",
+       "6742  yellen  2018-01-31        2   \n",
+       "6742  yellen  2018-01-31        2   \n",
+       "6742  yellen  2018-01-31        2   \n",
+       "6742  yellen  2018-01-31        2   \n",
+       "6742  yellen  2018-01-31        2   \n",
        "\n",
        "                                                content  \n",
-       "0                              Thank you, Mr. Chairman.  \n",
-       "0     As we search for the signal of an incipient re...  \n",
-       "0     The first source of noise is the financial mar...  \n",
-       "0     Our financial markets usually exhibit controll...  \n",
-       "0     The stock market in particular seems to be sea...  \n",
+       "0                               Thank you, Madam Chair.  \n",
+       "0     I am privileged to be here to participate in t...  \n",
+       "0                                So thank you for that.  \n",
+       "0     Speaking of humility, I am humbled to be here ...  \n",
+       "0     I hope at the end of my remarks you won't thin...  \n",
        "...                                                 ...  \n",
-       "6701                                  Further comments?  \n",
-       "6701                                              Okay.  \n",
-       "6701  Well, hearing this discussion, I think my incl...  \n",
-       "6701  I recognize that there is some risk in doing i...  \n",
-       "6701  So let me ask Jim Clouse to make clear what th...  \n",
+       "6742                                  Further comments?  \n",
+       "6742                                              Okay.  \n",
+       "6742  Well, hearing this discussion, I think my incl...  \n",
+       "6742  I recognize that there is some risk in doing i...  \n",
+       "6742  So let me ask Jim Clouse to make clear what th...  \n",
        "\n",
-       "[260807 rows x 4 columns]"
+       "[261988 rows x 4 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -239,38 +239,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>bernanke</td>\n",
-       "      <td>2002-08-13</td>\n",
+       "      <td>barkin</td>\n",
+       "      <td>2018-01-31</td>\n",
        "      <td>1</td>\n",
-       "      <td>Thank you, Mr. Chairman.</td>\n",
+       "      <td>Thank you, Madam Chair.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>bernanke</td>\n",
-       "      <td>2002-08-13</td>\n",
+       "      <td>barkin</td>\n",
+       "      <td>2018-01-31</td>\n",
        "      <td>1</td>\n",
-       "      <td>As we search for the signal of an incipient re...</td>\n",
+       "      <td>I am privileged to be here to participate in t...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>bernanke</td>\n",
-       "      <td>2002-08-13</td>\n",
+       "      <td>barkin</td>\n",
+       "      <td>2018-01-31</td>\n",
        "      <td>1</td>\n",
-       "      <td>The first source of noise is the financial mar...</td>\n",
+       "      <td>So thank you for that.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>bernanke</td>\n",
-       "      <td>2002-08-13</td>\n",
+       "      <td>barkin</td>\n",
+       "      <td>2018-01-31</td>\n",
        "      <td>1</td>\n",
-       "      <td>Our financial markets usually exhibit controll...</td>\n",
+       "      <td>Speaking of humility, I am humbled to be here ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>bernanke</td>\n",
-       "      <td>2002-08-13</td>\n",
+       "      <td>barkin</td>\n",
+       "      <td>2018-01-31</td>\n",
        "      <td>1</td>\n",
-       "      <td>The stock market in particular seems to be sea...</td>\n",
+       "      <td>I hope at the end of my remarks you won't thin...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -280,35 +280,35 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>260802</th>\n",
+       "      <th>261983</th>\n",
        "      <td>yellen</td>\n",
        "      <td>2018-01-31</td>\n",
        "      <td>2</td>\n",
        "      <td>Further comments?</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>260803</th>\n",
+       "      <th>261984</th>\n",
        "      <td>yellen</td>\n",
        "      <td>2018-01-31</td>\n",
        "      <td>2</td>\n",
        "      <td>Okay.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>260804</th>\n",
+       "      <th>261985</th>\n",
        "      <td>yellen</td>\n",
        "      <td>2018-01-31</td>\n",
        "      <td>2</td>\n",
        "      <td>Well, hearing this discussion, I think my incl...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>260805</th>\n",
+       "      <th>261986</th>\n",
        "      <td>yellen</td>\n",
        "      <td>2018-01-31</td>\n",
        "      <td>2</td>\n",
        "      <td>I recognize that there is some risk in doing i...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>260806</th>\n",
+       "      <th>261987</th>\n",
        "      <td>yellen</td>\n",
        "      <td>2018-01-31</td>\n",
        "      <td>2</td>\n",
@@ -316,40 +316,40 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>260807 rows × 4 columns</p>\n",
+       "<p>261988 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           lname        date  section  \\\n",
-       "0       bernanke  2002-08-13        1   \n",
-       "1       bernanke  2002-08-13        1   \n",
-       "2       bernanke  2002-08-13        1   \n",
-       "3       bernanke  2002-08-13        1   \n",
-       "4       bernanke  2002-08-13        1   \n",
-       "...          ...         ...      ...   \n",
-       "260802    yellen  2018-01-31        2   \n",
-       "260803    yellen  2018-01-31        2   \n",
-       "260804    yellen  2018-01-31        2   \n",
-       "260805    yellen  2018-01-31        2   \n",
-       "260806    yellen  2018-01-31        2   \n",
+       "         lname        date  section  \\\n",
+       "0       barkin  2018-01-31        1   \n",
+       "1       barkin  2018-01-31        1   \n",
+       "2       barkin  2018-01-31        1   \n",
+       "3       barkin  2018-01-31        1   \n",
+       "4       barkin  2018-01-31        1   \n",
+       "...        ...         ...      ...   \n",
+       "261983  yellen  2018-01-31        2   \n",
+       "261984  yellen  2018-01-31        2   \n",
+       "261985  yellen  2018-01-31        2   \n",
+       "261986  yellen  2018-01-31        2   \n",
+       "261987  yellen  2018-01-31        2   \n",
        "\n",
        "                                                  content  \n",
-       "0                                Thank you, Mr. Chairman.  \n",
-       "1       As we search for the signal of an incipient re...  \n",
-       "2       The first source of noise is the financial mar...  \n",
-       "3       Our financial markets usually exhibit controll...  \n",
-       "4       The stock market in particular seems to be sea...  \n",
+       "0                                 Thank you, Madam Chair.  \n",
+       "1       I am privileged to be here to participate in t...  \n",
+       "2                                  So thank you for that.  \n",
+       "3       Speaking of humility, I am humbled to be here ...  \n",
+       "4       I hope at the end of my remarks you won't thin...  \n",
        "...                                                   ...  \n",
-       "260802                                  Further comments?  \n",
-       "260803                                              Okay.  \n",
-       "260804  Well, hearing this discussion, I think my incl...  \n",
-       "260805  I recognize that there is some risk in doing i...  \n",
-       "260806  So let me ask Jim Clouse to make clear what th...  \n",
+       "261983                                  Further comments?  \n",
+       "261984                                              Okay.  \n",
+       "261985  Well, hearing this discussion, I think my incl...  \n",
+       "261986  I recognize that there is some risk in doing i...  \n",
+       "261987  So let me ask Jim Clouse to make clear what th...  \n",
        "\n",
-       "[260807 rows x 4 columns]"
+       "[261988 rows x 4 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
